# ai_knowledge_library

./: .coverage  .directory  .env.template  .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  Makefile  README.md  USER_PROFILE.md  _config.yml  annotations.txt  app.js  change_log.md  coverage.out  docker-compose.yml  go.mod  go.sum  improvements.md  index.html  index.md  issues.md  parsed.txt  patch.diff  pyproject.toml  refinement_tracker.md  requirements.txt  scripts.html  search.js  styles.css  tools.html
.agents/: skills.json
.github/: dependabot.yml
.telemetry/: telemetry.db
api/: index.html  scripts.html  search.js  src.html  tools.html
config/: loader.py  settings.yaml
docs/: GEMINI.md  _config.yml  app.js  change_log.md  index.html  styles.css
documentation/: USER_GUIDE.md  coding_standards.md  model_tool_roster.md  multi_agent_payload_protocol.md  skill_refinement_progress.md
infrastructure/: README.md  network_diagram.md
projects/: README.md
scripts/: backup_library.py  bootstrap.html  bootstrap.py  clean_backups.py  clean_logs.py  fetch_rss_feeds.py  fetch_security_news.py  generate_adr.html  generate_adr.py  generate_agent_summary.py  generate_knowledge_graph.py  generate_skills_manifest.py  github_profile_sync.py  install_git_hooks.py  install_global.ps1  install_global.sh  install_pre_commit_hook.py  install_pre_push_hook.html  install_pre_push_hook.py  job_hunting_pipeline.py  library_statistics.py  monitor_cron.py  prune_context.py  pull_from_docs.py  push_to_docs.html  setup_cron.py  (+14 more)
(+493 files in other folders)
