[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-knowledge-library"
version = "0.1.0"
description = "AI Knowledge Library Agent System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "chromadb",
    "sentence-transformers",
    "Jinja2",
    "pyyaml",
    "fastapi",
    "uvicorn",
    "beautifulsoup4",
    "requests",
    "streamlit",
    "psycopg2-binary",
    "pgvector",
    "redis",
    "boto3",
    "google-genai",
    "textual",
    "litellm",
    "pandas",
    "pydantic-settings",
    "langchain-text-splitters",
    "celery",
    "redis",
    "langgraph",
    "langchain-core",
    "langsmith",
    "mcp"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "flake8",
    "black",
    "bandit",
    "pdoc"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
